# RandomGen

./: CMakeLists.txt  Dockerfile  README.md  docker-entrypoint.sh
.github/workflows/: ci.yml  release.yml
examples/: RandomGenExample.cpp
include/: RandomGen.h
src/: RandomGen.cpp
tests/: RandomGenTests.cpp
